--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "bootstrap": "4.5.2",
+    "bootstrap": "^4.5.2",
+    "bootstrap-social": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-popper": "1.3.6",
@@ -14,6 +20,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
     "reactstrap": "8.5.1",
+    "social": "^0.4.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
